--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -29,7 +29,7 @@
 
 
 
-<div class="Pomodoro">
+<div class="Pomodoro">Pomodoro Clock
   
   <div class="time">--:--</div>
   <div class="info"></div>
