--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -29,8 +29,11 @@
 
 
 
-<div class="Pomodoro">Pomodoro Clock
-  
+<div class="Pomodoro">
+	
+	<div class="title">
+	Pomodoro Clock
+  </div>
   <div class="time">--:--</div>
   <div class="info"></div>
   <div class="buttons">
