primary button replaced with icons

--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -42,15 +42,15 @@
 </div>
   <div class="work_thingy">
      <div class="col-xs-6 work">
-       <div id="minWork" class="number">25</div>
-       <div id="addWork" class="btn btn-primary">+1</div>
-       <div id="subWork" class="btn btn-primary">-1</div>
+       <div id="addWork" class="btn "><i class="fa fa-caret-square-o-up fa-stack-2x" aria-hidden="true"></i></div>
+       <div id="minWork" class="number"></br>25</div>
+       <div id="subWork" class="btn"><i class="fa fa-caret-square-o-down fa-stack-2x" aria-hidden="true"></i></div>
        <p class="work_head">Time to work</p>
     </div>
     <div class="col-xs-6 break">
-       <div id="minBreak" class="number">5</div>
-       <div id="addBreak" class="btn btn-primary">+1</div>
-       <div id="subBreak" class="btn btn-primary">-1</div>
+       <div id="addBreak" class="btn"><i class="fa fa-caret-square-o-up fa-stack-2x" aria-hidden="true"></i></div>
+       <div id="minBreak" class="number"></br>5</div>
+       <div id="subBreak" class="btn"><i class="fa fa-caret-square-o-down fa-stack-2x" aria-hidden="true"></i></div>
        <p class="relax_head">Relax a bit</p>
     </div>
   </div>
