--- a/profile/index.html
+++ b/profile/index.html
@@ -248,6 +248,7 @@
       </div>     
     </div>
     <footer class="navbar-fixed-bottom">
+<p class="text-center">made with skeleton framework</p>
       <p class="text-center">made with <i class="fa fa-heart heart"></i> and <i class="fa fa-music" aria-hidden="true"></i> 
                       by Yogitha Polavarapu</p>
     </footer>
