added term based and phrase based buttons

--- a/document_similarity/index.html
+++ b/document_similarity/index.html
@@ -31,9 +31,11 @@
   </div>
 </div>
 <div class="buttons">
-   <button class="btn" id="check">check
+   <button class="btn" id="phrase_check">phrase based check
   </button>
   <button class="btn" id="clear">clear
+  </button>
+<button class="btn" id="check">term based check
   </button>
 </div>
 
