just check and clear

--- a/document_similarity/index.html
+++ b/document_similarity/index.html
@@ -31,19 +31,21 @@
   </div>
 </div>
 <div class="buttons">
-   <button class="btn" id="phrase_check">phrase based check
-  </button>
+   <!--<button class="btn" id="phrase_check">phrase based check
+  </button>-->
   <button class="btn" id="clear">clear
   </button>
-<button class="btn" id="term_check">term based check
-  </button>
+<!--<button class="btn" id="term_check">check
+</button>-->
+  <button class="btn" id="check">check
+    </button>
 </div>
 
 <div class="text-center" id="level"><!--<svg viewbox="0 0 50 50" id="extent">
       <circle id="circle-base" cx="20%" cy="20%" r="10%" />
       <circle id="circle-fill" cx="20%" cy="20%" r="10%" /> Sorry, your browser does not support inline SVG.
     </svg>--></div>
-<div class="text-center" id="percentage"> </div>
+
 
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
