--- a/document_similarity/index.html
+++ b/document_similarity/index.html
@@ -35,6 +35,8 @@
   </button>-->
   <button class="btn" id="clear">clear
   </button>
+
+  <img src="documents.png"  alt="smallicon" >
 <!--<button class="btn" id="term_check">check
 </button>-->
   <button class="btn" id="check">check
