added phrase and term buttons

--- a/document_similarity/index.html
+++ b/document_similarity/index.html
@@ -33,16 +33,19 @@
 <div class="buttons">
    <!--<button class="btn" id="phrase_check">phrase based check
   </button>-->
-  <button class="btn" id="clear">clear
-  </button>
 
-  <img src="documents.png"  alt="smallicon" >
+  <button class="btn" id="check">term based check
+    </button>
+
+  <img src="documents.png"  alt="smallicon" height="130px" width="110px" >
 <!--<button class="btn" id="term_check">check
 </button>-->
-  <button class="btn" id="check">check
+  <button class="btn" id="check">phrase based check
     </button>
 </div>
-
+<div class="text-center">
+<button class="btn text-center" id="clear">clear
+</button></div>
 <div class="text-center" id="level"><!--<svg viewbox="0 0 50 50" id="extent">
       <circle id="circle-base" cx="20%" cy="20%" r="10%" />
       <circle id="circle-fill" cx="20%" cy="20%" r="10%" /> Sorry, your browser does not support inline SVG.
